--- a/html-files/future.html
+++ b/html-files/future.html
@@ -20,7 +20,7 @@
 <header>
     <nav id='nav' class="navbar py-4 navbar-expand-md navbar-light fixed-top bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">ZhuoFan | Future Prospect&nbsp;&nbsp;&nbsp;</a>
+            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2" style="height:30px;"  alt="ZhuoFan">ZhuoFan | Future Prospect&nbsp;&nbsp;&nbsp;</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
