Allocate correct link for all cards.Improve overall experience in feedback page

--- a/html-files/about.html
+++ b/html-files/about.html
@@ -215,10 +215,10 @@
         </div>
     </div>
 </div>
-<div class="container-fluid margintop grey">
-    <div class="container">
+<div class="container-fluid margintop grey" id="achievement">
+    <div class="container" >
     <div class="row">
-        <div class="col-md-12 col-sm-12 text-center">
+        <div class="col-md-12 col-sm-12 text-center" >
             <h1><span style="color:goldenrod">Achievements</span> and <span style="color:brown">Certification</span></h1>
             <p></p>
             <br><br>
@@ -551,6 +551,25 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class=" position-fixed bottom-0 end-0 p-3" style="z-index: 99;">
+
+    <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
+        <div class="toast-header">
+            <img src="../profilepic/profile.jpg" style="width:25px;" class="rounded me-2" alt="...">
+            <strong class="mr-auto">ZhuoFan</strong>
+
+            <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
+
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">
+            </button>
+        </div>
+
+        <div class="toast-body">
+            Hello,I am ZhuoFan.<br>This is my about page.<br>Hope that you can find what you need.<br>Have a nice day!! :)
         </div>
     </div>
 </div>
