--- a/html-files/future.html
+++ b/html-files/future.html
@@ -172,7 +172,7 @@
                                 <p><strong>When I first walked into SP on 14 April 2021 for the <span style="color:royalblue">freshman orientation program</span>, I was actually  <span style="color:mediumseagreen">kind of excited </span> to meet new people and see new things.</strong></p>
                             </div>
                             <div class="col text-center">
-                                <button type="button" class="btn btn-primary">Look at the experience</button>
+                                <button type="button" onclick="window.location.href='sp.html';" class="btn btn-primary">Look at the experience</button>
                             </div>
                         </div>
                     </div>
@@ -194,7 +194,7 @@
 
                             </div>
                             <div class="col text-center">
-                                <button type="button" class="btn btn-success">Learn More</button>
+                                <button type="button" onclick="window.location.href='sp.html#classmatese';" class="btn btn-success">Learn More</button>
                             </div>
                         </div>
                     </div>
