--- a/html-files/index.html
+++ b/html-files/index.html
@@ -253,7 +253,7 @@
 
                     </div>
                     <div class="col text-center">
-                        <button type="button" class="btn btn-info">Look at the experience</button>
+                        <button type="button" onclick="window.location.href='future.html';" class="btn btn-info">Look at the experience</button>
                     </div>
                 </div>
                 </div>
