--- a/html-files/sp.html
+++ b/html-files/sp.html
@@ -123,8 +123,8 @@
         </div>
     </div>
 </div>
-<div class="container-fluid grey margintop" >
-    <div class="container">
+<div class="container-fluid grey margintop" id="classmatese" >
+    <div class="container" >
         <div class="row" id="studysection">
             <div class="col-sm-12 col-md-6">
 <img src="../spphoto/Studying.svg" id="study" style="height:300px;" alt="study" class="greyscale">
