--- a/html-files/feedback.html
+++ b/html-files/feedback.html
@@ -444,5 +444,45 @@
         </div>
     </div>
 </div>
+<div class=" position-fixed bottom-0 end-0 p-3" style="z-index: 99;">
+<div class="toast-container">
+    <div class="toast" id="sucessfd" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
+        <div class="toast-header">
+            <img src="../profilepic/profile.jpg" style="width:25px;" class="rounded me-2" alt="...">
+            <strong class="mr-auto">ZhuoFan</strong>
+
+            <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
+
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">
+            </button>
+        </div>
+
+        <div class="toast-body">
+            Thank you for your feedback.Your feedback is now live in the feedback wall!<br>Have a nice day!! :)
+        </div>
+    </div>
+
+
+
+    <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
+        <div class="toast-header">
+            <img src="../profilepic/profile.jpg" style="width:25px;" class="rounded me-2" alt="...">
+            <strong class="mr-auto">ZhuoFan</strong>
+
+            <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
+
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">
+            </button>
+        </div>
+
+        <div class="toast-body">
+            Hello,I am ZhuoFan.<br>This is my feedback page.<br>Do write a kind comment?.<br>Have a nice day!! :)
+        </div>
+    </div>
+
+
+
+</div>
+</div>
 </body>
 </html>
