Update info for about

--- a/html-files/about.html
+++ b/html-files/about.html
@@ -353,19 +353,19 @@
                     <th scope="row">1</th>
                     <td>Diploma In Applied AI and Analytics </td>
                     <td>Currently Studying</td>
-                    <td>NA</td>
+                    <td>Expected by 2023</td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
                     <td>Google UX Design Professional Certificate</td>
                     <td>Currently Studying</td>
-                    <td>NA</td>
+                    <td>Expected by 2021</td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td>Specialization Certificates in 程序设计与算法</td>
                     <td>Currently Studying</td>
-                    <td>NA</td>
+                    <td>Expected by 2021</td>
                 </tr>
                 <tr>
                     <th scope="row">4</th>
