Update Certificate list

--- a/html-files/about.html
+++ b/html-files/about.html
@@ -357,15 +357,15 @@
                 </tr>
                 <tr>
                     <th scope="row">2</th>
-                    <td>Google UX Design Professional Certificate</td>
-                    <td>Currently Studying</td>
-                    <td>Expected by 2021</td>
+                    <td>Google Foundation of User Experience Design Certificate</td>
+                    <td>Attained</td>
+                    <td>2021</td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td>Specialization Certificates in 程序设计与算法</td>
-                    <td>Currently Studying</td>
-                    <td>Expected by 2021</td>
+                    <td>Attained</td>
+                    <td>2021</td>
                 </tr>
                 <tr>
                     <th scope="row">4</th>
