--- a/html-files/secondary.html
+++ b/html-files/secondary.html
@@ -71,93 +71,76 @@
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="8" aria-label="Slide 9"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="9" aria-label="Slide 10"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="10" aria-label="Slide 11"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="11" aria-label="Slide 12"></button>
             </div>
             <div class="carousel-inner">
-                <div class="carousel-item active">
+                <div class="carousel-item active" data-bs-interval="2000">
                     <img src="../secondaryschoolphoto/presentationcarousel/10742781328_IMG_7182.jpg" style="height:500px;" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5>Secondary One Orientation Programme 2019</h5>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="2000">
                     <img src="../secondaryschoolphoto/presentationcarousel/IMG_20210606_195424.jpg" style="height:500px;"  class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                        <h5 style="color:black;">3 Opal Racial Harmony Day 2019</h5>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="2000">
                     <img src="../secondaryschoolphoto/presentationcarousel/im.jpg" style="height:500px;"  class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h5>15th Student Council Investiture 2019</h5>
+
                     </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="2000">
                     <img src="../secondaryschoolphoto/presentationcarousel/2019-07-02%2006.04.58%202079138951209552530_1490202012.jpg" style="height:500px;"  class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5>15th Student Council Investiture 2019</h5>
+
                     </div>
                 </div>
 
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="2000">
                     <img src="../secondaryschoolphoto/presentationcarousel/fr.jpg"  style="height:500px;" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5>Chinese New Year Celebration Performance 2019</h5>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="2000">
                     <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190204-WA0058.jpg"  style="height:500px;" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5>Chinese New Year Celebration Performance 2019</h5>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="2000">
                     <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190117-WA0015.jpg"  style="height:500px;" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5>Secondary One Orientation Programme 2019 <br>Organising Committee</h5>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="2000">
                     <img src="../secondaryschoolphoto/presentationcarousel/IMG_20190808_093801.jpg" style="height:500px;"  class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5>National Day Celebration 2020</h5>
                     </div>
                 </div>
 
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="2000">
                     <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190125-WA0013%20(1).jpg"  style="height:500px;" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5>Dinner of Meet The Parent Session 2020</h5>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190204-WA0058.jpg" style="height:500px;"  class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="2000">
                     <img src="../secondaryschoolphoto/presentationcarousel/fr1.jpg" style="height:500px;" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5>Chinese New Year Celebration Performance 2019</h5>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="2000">
                     <img src="../secondaryschoolphoto/presentationcarousel/689a1c2e-433b-4aab-8c74-7db72595ddfd.jpg"  style="height:500px;" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5>Student Leader Training Camp <br>Facilitator Committee</h5>
                     </div>
                 </div>
             </div>
